test/compile_errors/err_concat_non_str.w
//! expect-check-fail: right operand of ++ must be str
fn main:
    let s = "hello" ++ 42
    print(s)
